# openai-summarization-app

./: .gitignore  README.md  pyproject.toml
openai_summarization_app/: main.py
